# mecapivision

./: .gitignore  LICENSE  README.md  camera_calibration.py  detect_aruco.py  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: python.yml
calibrations/: calibration_webcam_thinkpad.json
images/: test_chessboard.tiff
mecapivision/: aruco.py  calibrate_camera.py  camera_calibration.py  chessboard.py  fake_camera_calibration.py  main.py  utils.py
src/: aruco.py  camera_calibration.py  chessboard.py  main.py
src/mecapivision/: __init__.py  __main__.py  _settings.py  _utils.py  processing.py
src/mecapivision/calibration/: __init__.py  _utils.py  calibrate_camera.py  charuco.py  chessboard.py  fake_calibrate_camera.py  fake_chessboard.py  record.py  undistort.py
src/mecapivision/detection/: __init__.py  aruco.py  chessboard.py  live_detection.py
src/mecapivision/images/: tutorial_camera_params.yml
tests/: test_chessboard.py  test_main.py
