[project]
name = "mecapivision"
version = "0.1.0"
description = "detect aruco tags with a camera"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["opencv-python>=4.11.0.86"]

[tool.pylint]
max-line-length = 90

[tool.pylint.typecheck]
extension-pkg-allow-list = "cv2"

[tool.ruff]
line-length = 90

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]
