[project]
name = "mecapivision"
version = "0.1.0"
description = "detect aruco tags with a camera"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = ["opencv-python>=4.11.0.86"]

[dependency-groups]
dev = [{ include-group = "lint" }, { include-group = "test" }]
lint = ["flake8>=7.1.2", "mypy>=1.15.0", "ruff>=0.9.6"]
test = ["pytest>=8.3.4"]

[project.scripts]
vision = "mecapivision:main"
chesscalib = "mecapivision:calibrate_camera_with_chessboard"

[tool.uv]
package = true

[tool.pylint]
max-line-length = 90

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.pylint.typecheck]
extension-pkg-allow-list = "cv2"

[tool.ruff]
line-length = 90
