[project]
name = "mecapivision"
version = "0.1.0"
description = "detect aruco tags with a camera"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
# on ne peut pas utiliser p5 parce que pyopengl qui ne build pas correctement
# https://github.com/mcfletch/pyopengl/issues/118#issuecomment-2351365603
dependencies = [
    "click>=8.1.8",
    "loguru>=0.7.3",
    "opencv-contrib-python>=4.11.0.86",
    "py5>=0.10.4a2",
]

[dependency-groups]
dev = [{ include-group = "lint" }, { include-group = "test" }]
lint = ["flake8>=7.1.2", "mypy>=1.15.0", "ruff>=0.9.6"]
test = ["pytest>=8.3.4"]

[project.scripts]
calibfake = "mecapivision:calibrate_fake_camera"
caliblive = "mecapivision:calibrate_camera_from_livestream"
vision = "mecapivision:main"
record = "mecapivision:record_pictures_cli"
calibrate = "mecapivision:calibrate_camera_from_pictures"
detect = "mecapivision:cli"
charuco = "mecapivision:calibrate_charuco"

[tool.uv]
package = true

[tool.pylint]
max-line-length = 90

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.pylint.typecheck]
extension-pkg-allow-list = "cv2"

[tool.ruff]
line-length = 90
